--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">DZcalkulator</string>
+    <string name="reset">Reset</string>
+    <string name="exit">Exit</string>
 </resources>
